hphp/test/zend/good/Zend/tests/dynamic_call_004.php.expectf
Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: a' in %s/dynamic_call_004.php:3
Stack trace:
%A
